-tweaked navbar css to prevent element overlapping

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,9 +11,12 @@
 }
 
 #navbar{
-    margin-left: 20px;
-    margin-right: 20px;
+    /* I added margins to your navbar so your links dont get overlapped by
+    by others*/
+    margin-left: 40px;
+    margin-right: 40px;
     padding-top: 40px;
+    /*padding-left: 40px;*/
     width: 170px;
 }
 
